// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: codegen callExpression + objectExpression + arrayExpression 1`] = `
"return function render() {
  with (this) {
    return createVNode(\\"div\\", {
      id: \\"foo\\",
      [prop]: bar,
      [foo + bar]: bar
    }, [createVNode(\\"p\\", { \\"some-key\\": \\"foo\\" })], [
      foo,
      createVNode(\\"p\\")
    ])
  }
}"
`;

exports[`compiler: codegen comment 1`] = `
"return function render() {
  with (this) {
    return createVNode(Comment, 0, \\"foo\\")
  }
}"
`;

exports[`compiler: codegen compound expression 1`] = `
"return function render() {
  with (this) {
    return toString(_ctx.foo)
  }
}"
`;

exports[`compiler: codegen forNode 1`] = `
"return function render() {
  with (this) {
    return renderList(list, (v, k, i) => toString(v))
  }
}"
`;

exports[`compiler: codegen forNode w/ skipped key alias 1`] = `
"return function render() {
  with (this) {
    return renderList(list, (v, __key, i) => toString(v))
  }
}"
`;

exports[`compiler: codegen forNode w/ skipped value alias 1`] = `
"return function render() {
  with (this) {
    return renderList(list, (__value, k, i) => toString(v))
  }
}"
`;

exports[`compiler: codegen forNode w/ skipped value and key aliases 1`] = `
"return function render() {
  with (this) {
    return renderList(list, (__value, __key, i) => toString(v))
  }
}"
`;

exports[`compiler: codegen function mode preamble 1`] = `
"const { helperOne, helperTwo } = Vue

return function render() {
  with (this) {
    return null
  }
}"
`;

exports[`compiler: codegen ifNode 1`] = `
"return function render() {
  with (this) {
    return (foo)
      ? \\"foo\\"
      : (bar)
        ? toString(bye)
        : createVNode(Comment, 0, \\"foo\\")
  }
}"
`;

exports[`compiler: codegen ifNode with no v-else 1`] = `
"return function render() {
  with (this) {
    return (foo)
      ? \\"foo\\"
      : (bar)
        ? toString(bye)
        : null
  }
}"
`;

exports[`compiler: codegen interpolation 1`] = `
"return function render() {
  with (this) {
    return toString(hello)
  }
}"
`;

exports[`compiler: codegen module mode preamble 1`] = `
"import { helperOne, helperTwo } from 'vue'

export default function render() {
  with (this) {
    return null
  }
}"
`;

exports[`compiler: codegen prefixIdentifiers: true should inject _ctx statement 1`] = `
"return function render() {
  const _ctx = this
  return null
}"
`;

exports[`compiler: codegen statement preambles 1`] = `
"return function render() {
  const a = 1
  const b = 2
  
  with (this) {
    return null
  }
}"
`;

exports[`compiler: codegen static text 1`] = `
"return function render() {
  with (this) {
    return \\"hello\\"
  }
}"
`;

exports[`compiler: codegen text + comment + interpolation 1`] = `
"return function render() {
  with (this) {
    return [
      \\"foo\\",
      toString(hello),
      createVNode(Comment, 0, \\"foo\\")
    ]
  }
}"
`;
